erDiagram
    SITE ||--o{ ZONE : has
    SITE ||--o{ CAMERA : has
    SITE ||--o{ SITE_MAP_VERSION : has
    CAMERA ||--o{ SITE_MAP_VERSION : "captured from (OVERVIEW role)"
    SITE_MAP_VERSION ||--o{ PARKING_SLOT_GEOMETRY : contains
    ZONE ||--o{ PARKING_SLOT : groups
    PARKING_SLOT ||--o{ PARKING_SLOT_GEOMETRY : revisions
    PARKING_SLOT ||--o| SLOT_OCCUPANCY : has
    SLOT_OCCUPANCY }o--o| VEHICLE : occupant

    SITE {
        uuid id PK
        uuid tenant_id FK
        string name
        string timezone
    }
    ZONE {
        uuid id PK
        uuid site_id FK
        string name
    }
    CAMERA {
        uuid id PK
        uuid site_id FK
        string role
        string rtsp_url
        jsonb calibration_json
    }
    SITE_MAP_VERSION {
        uuid id PK
        uuid site_id FK
        uuid camera_id FK
        int version_no
        string status
        string source_image_url
        jsonb calibration_json
        timestamp published_at
    }
    PARKING_SLOT {
        uuid id PK
        uuid tenant_id FK
        uuid site_id FK
        uuid zone_id FK
        string code
        string admin_status
        timestamp updated_at
    }
    PARKING_SLOT_GEOMETRY {
        uuid id PK
        uuid slot_id FK
        uuid map_version_id FK
        geometry polygon
        timestamp created_at
    }
    SLOT_OCCUPANCY {
        uuid slot_id PK
        string status
        uuid current_vehicle_id FK
        string track_id
        timestamp last_seen_at
    }
    VEHICLE {
        uuid id PK
        string license_plate
        uuid current_slot_id FK
    }
